--- a/create_html.ipynb
+++ b/create_html.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,26 +44,27 @@
     "start_date_datetime = datetime.strptime(start_date, \"%Y/%m/%d\")\n",
     "end_date_datetime = datetime.strptime(end_date, \"%Y/%m/%d\")\n",
     "current_year = end_date_datetime.year\n",
-    "html_page_name = \"2024.html\""
+    "html_page_name_list = [f\"{current_year}.html\", \"index.html\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "page_template = environment.get_template(\"index.html\")\n",
-    "template_level = html_page_name.count(\"/\")\n",
-    "page_html_path = HOSTING_PATH / html_page_name\n",
-    "page_content = page_template.render(\n",
-    "    TEMPLATE_LEVEL=template_level,\n",
-    "    start_date=start_date_datetime,\n",
-    "    end_date=end_date_datetime,\n",
-    "    current_year=current_year,\n",
-    ")\n",
-    "with open(page_html_path, mode=\"w\", encoding=\"utf-8\") as page:\n",
-    "    page.write(page_content)"
+    "for html_page_name in html_page_name_list:\n",
+    "    page_template = environment.get_template(\"landingpage.html\")\n",
+    "    template_level = html_page_name.count(\"/\")\n",
+    "    page_html_path = html_page_name\n",
+    "    page_content = page_template.render(\n",
+    "        TEMPLATE_LEVEL=template_level,\n",
+    "        start_date=start_date_datetime,\n",
+    "        end_date=end_date_datetime,\n",
+    "        current_year=current_year,\n",
+    "    )\n",
+    "    with open(page_html_path, mode=\"w\", encoding=\"utf-8\") as page:\n",
+    "        page.write(page_content)"
    ]
   },
   {
